tests/typechecking/valid/call_good_arg.ml
let _ = 1 in print_int ()
