tests/typechecking/invalid/1e0 insteadOf 1.0 .ml
let x = 1e0 in print_int x
